--- a/index.html
+++ b/index.html
@@ -6,14 +6,157 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile App Landing Page</title>
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <div class="container">
-        <h2>hello world!</h2>
-    </div>
+    <!--Header Area-->
+    <header class="header-area">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="./images/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">feature</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">reviews</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">screenshoots</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">demo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">ourteam</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">support</a>
+                    </li>
+                    <li class="nav-item ms-3">
+                        <a class="btn btn-primary text-uppercase" href="#">buy theme</a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!--Home Area-->
+    <section class="home-area">
+        <div class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="d-flex align-items-center">
+                            <div class="col-md-4">
+                                <img class="img-fluid" src="./images/s-img1.jpg" alt="">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="home-content px-5">
+                                    <h1 class="text-uppercase mb-4 text-light">
+                                        awesome mobile app
+                                    </h1>
+                                    <p class="mb-4 text-light">An awesome WordPress theme for App landing and App Store site</p>
+                                    <div class="btns mt-5">
+                                        <a href="" class="btn btn-outline-light btn-lg">apple store</a>
+                                        <a href="" class="btn btn-outline-light btn-lg">google play</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex align-items-center">
+                            <div class="col-md-4">
+                                <img class="img-fluid" src="./images/s-img2.jpg" alt="">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="home-content px-5">
+                                    <h1 class="text-uppercase mb-4 text-light">
+                                        awesome mobile app
+                                    </h1>
+                                    <p class="mb-4 text-light">An awesome WordPress theme for App landing and App Store site</p>
+                                    <div class="btns mt-5">
+                                        <a href="" class="btn btn-outline-light btn-lg">apple store</a>
+                                        <a href="" class="btn btn-outline-light btn-lg">google play</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex align-items-center">
+                            <div class="col-md-4">
+                                <img class="img-fluid" src="./images/s-img3.jpg" alt="">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="home-content px-5">
+                                    <h1 class="text-uppercase mb-4 text-light">
+                                        awesome mobile app
+                                    </h1>
+                                    <p class="mb-4 text-light">An awesome WordPress theme for App landing and App Store site</p>
+                                    <div class="btns mt-5">
+                                        <a href="" class="btn btn-outline-light btn-lg">apple store</a>
+                                        <a href="" class="btn btn-outline-light btn-lg">google play</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </section>
+    <div width="500" style="height: 500px"></div>
+    <footer class="footer-top">
+        <div class="container">
+            <div class="footer-content text-center">
+                <ul class="list-unstyled m-0 d-flex justify-content-center pb-4">
+                    <li class="nav-item"><a class="text-light nav-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li class="nav-item"><a class="text-light nav-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li class="nav-item"><a class="text-light nav-link" href="#"><i class="fab fa-behance"></i></a></li>
+                    <li class="nav-item"><a class="text-light nav-link" href="#"><i class="fab fa-dribbble"></i></a></li>
+                </ul>
+                <h2 class='text-light pb-4'>THANKS FOR STOPPING BY OUR WEBSITE!</h2>
+                <p class="fst-italic text-light">Claritas est etiam processus dynamicus, qui sequitur mutationem .</p>
+            </div>
+        </div>
+    </footer>
+    <section class="footer-area py-4 bg-dark">
+        <div class="container">
+            <div class="footer-row ">
+                <div class="">
+                    <p class="m-0 text-light">&copy; 2022 fantastic. made with <i class="fas fa-heart"></i> by Tanjir.</p>
+                </div>
+                <div class="">
+                    <ul class="list-unstyled d-flex m-0">
+                        <li class="nav-item"><a href="#" class="nav-link text-light">ourteam</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link text-light">sitemap</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link text-light">login</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
